--- a/src/components/Label/index.css
+++ b/src/components/Label/index.css
@@ -1,4 +1,23 @@
 .calendar-label {
-  outline: 1px solid rgba(27, 31, 35, 0.06);
-  background-color: var(--color-bg-level-1);
+  position: relative;
+  padding: 0.125em 0.5em 0.125em 0;
+  text-align: left;
+}
+
+.sr-only {
+  position: absolute;
+  overflow: hidden;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  word-wrap: normal;
+}
+
+.calendar-label-text {
+  position: absolute;
+  clip-path: None;
+  top: -4px;
+  font-size: 12px;
 }
