--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -3,3 +3,11 @@ table {
   border-spacing: 3px;
   border-color: gray;
 }
+
+.container {
+  display: flex !important;
+  text-align: center !important;
+  max-width: 100%;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
