--- a/src/components/Label/index.css
+++ b/src/components/Label/index.css
@@ -1,6 +1,6 @@
 .calendar-label {
   position: relative;
-  padding: 0.125em 0.5em 0.125em 0;
+  padding: 0.125em 0 0.125em 0;
   text-align: left;
 }
 
