style: modify table style

--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 1.618em 0.5em 1.618em 0.5em;
+  padding: 1.618em 1em;
   display: flex !important;
   text-align: center !important;
   max-width: 100%;
