--- a/src/components/Label/index.css
+++ b/src/components/Label/index.css
@@ -1,11 +1,11 @@
 .calendar-label {
   position: relative;
-  padding: 0.125em 0 0.125em 0;
+  padding: 0.125em 0;
   text-align: left;
 }
 
 .calendar-label-text {
   position: absolute;
-  top: -4px;
+  top: -0.1em;
   font-size: 12px;
 }
