--- a/src/components/TableBody/index.css
+++ b/src/components/TableBody/index.css
@@ -1,3 +1,12 @@
+table {
+  min-width: max-content;
+  margin: 0;
+  padding: 0;
+  display: table;
+  border-spacing: 3px;
+  border-color: gray;
+}
+
 tr {
   display: table-row;
   vertical-align: inherit;
