--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -1,10 +1,10 @@
 .container {
-  padding: 1.618em 1em;
-  display: flex !important;
-  text-align: center !important;
+  width: fit-content;
+}
+
+.calendar {
+  padding-top: 1.618em;
   max-width: 100%;
-  overflow-y: hidden;
-  overflow-x: auto;
 }
 
 table {
@@ -14,4 +14,6 @@ table {
   display: table;
   border-spacing: 3px;
   border-color: gray;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
