--- a/src/components/Description/index.css
+++ b/src/components/Description/index.css
@@ -17,5 +17,8 @@
   width: 10px;
   height: 10px;
   border-radius: 2px;
-  outline: 1px solid #1b1f230f;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
