chore(style): ignore dragging

--- a/src/components/TableHead/index.css
+++ b/src/components/TableHead/index.css
@@ -5,3 +5,10 @@ thead {
   top: 0;
   width: fit-content;
 }
+
+.day-of-the-week {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+}
