--- a/src/components/TableBody/index.module.css
+++ b/src/components/TableBody/index.module.css
@@ -1,14 +1,14 @@
-tbody {
+.tbody {
   width: fit-content;
   overflow: visible;
 }
 
-tr {
+.tr {
   display: table-row;
   vertical-align: inherit;
   border-color: inherit;
 }
 
-td {
+.td {
   padding: 0;
 }
