--- a/src/components/Table/index.module.css
+++ b/src/components/Table/index.module.css
@@ -2,20 +2,14 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
   font-weight: 400;
+  margin: 0;
+  padding: 0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji';
-  font-weight: 400;
-  margin: 0;
-  padding: 0;
 }
 
 .container {
@@ -28,7 +22,7 @@ body {
   white-space: nowrap;
 }
 
-table {
+.table {
   min-width: max-content;
   margin: 0;
   padding: 0;
